Avoid using translate() for positioning
It often results in a blurry result on WebKit based browsers.

--- a/app/styles/base.css
+++ b/app/styles/base.css
@@ -475,8 +475,8 @@ select:active {
   position: fixed;
   left: calc(100vw - 50px);
   right: auto;
-  top: 50%;
-  transform: translateY(-50%) scale(0);
+  top: calc(50vh - 25%);
+  transform: scale(0);
   width: 100px;
   height: 50%;
   max-height: 600px;
@@ -497,7 +497,7 @@ select:active {
   visibility: visible;
   opacity: 1;
   transition-delay: 0.2s;
-  transform: translateY(-50%) scale(1);
+  transform: scale(1);
 }
 
 /* General button style */
